src/handle_commands/snapshots/crust_boot_you__handle_commands__load_pipeline__testing__produce_set_from_uniques_paths.snap
---
source: src/handle_commands/load_pipeline.rs
expression: actual
---
[
  NodeEntryMeta(
    node_type: File,
    source_path: "/some/target/",
  ),
  NodeEntryMeta(
    node_type: File,
    source_path: "/some/target/a",
  ),
  NodeEntryMeta(
    node_type: File,
    source_path: "/some/target/b",
  ),
  NodeEntryMeta(
    node_type: File,
    source_path: "/some/target/cccc/zzz",
  ),
]
