src/handle_commands/snapshots/crust_boot_you__handle_commands__load_pipeline__testing__return_for_override.snap
---
source: src/handle_commands/load_pipeline.rs
expression: actual
---
NoConflict([
  SourceTargetNode(
    source_node: NodeEntryMeta(
      node_type: File,
      source_path: "/some/source/a",
    ),
    target: "/some/target/a",
  ),
  SourceTargetNode(
    source_node: NodeEntryMeta(
      node_type: File,
      source_path: "/some/source/b",
    ),
    target: "/some/target/b",
  ),
])
